First release of Comment App

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
   </li>
 <%end%><br>
 
-<%= link_to 'Create Article', new_user_article_path(@user) %>edw
+<%= link_to 'Create Article', new_user_article_path(@user) %>
 
 
 
