--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 <%= link_to 'Create Post', new_user_post_path(@user) %>
 
 <%# <%= render partial: "comments/index", locals: {commentable: @commentable} %> %>
-<%= link_to "Add Comment", new_user_post_comment_path(@commentable, @comment) %>
+<%# <%= link_to "Add Comment", new_user_post_comment_path(@commentable, @comment) %> %>
 
 
 
@@ -35,5 +35,4 @@
 
 <%= link_to 'Create Article', new_user_article_path(@user) %>
 
-
-
+<%= link_to "Home", users_path %>
