--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,6 @@
   </li>
 <%end%><br>
 
-<%= link_to 'Create Article', new_user_article_path(@user) %>
+<%= link_to 'Create Article', new_user_article_path(@user) %><br>
 
-<%= link_to "Home", users_path %>
+<%= link_to "All Users", users_path %>
